# Machine_learning_algorithm

Machine_learning_algorithm/: README.md
Machine_learning_algorithm/apprentissage_non_supervise/pca_normalization_clustering_metrics/: clustering.py  clustering_average.py  clustering_ward.py  crime_reduc_dim.py  reduc_dim.py
Machine_learning_algorithm/apprentissage_non_supervise/pca_normalization_clustering_silhouetteScore/: cluster_kaggle_improved.py
Machine_learning_algorithm/apprentissage_supervise/k_voisin/tp1/: exo1.py
Machine_learning_algorithm/apprentissage_supervise/random_forest/: README.txt  random_forest.py  random_forest2.py  resultat_randomF_2.txt
Machine_learning_algorithm/detect_anomalies/isolation_forest/: credit_card.py  spambase.py
Machine_learning_algorithm/projet_sentiment_analyze/sentim_analyz_aymane_ichou/sentim_analyz/: Makefile  README.md  main.py  pyproject.toml  requirements.txt
Machine_learning_algorithm/projet_sentiment_analyze/sentim_analyz_aymane_ichou/sentim_analyz/data/raw/: test.csv  train.csv  validation.csv
Machine_learning_algorithm/projet_sentiment_analyze/sentim_analyz_aymane_ichou/sentim_analyz/models/: log_reg.pkl  naive_bayes.pkl  svm_linear.pkl
Machine_learning_algorithm/projet_sentiment_analyze/sentim_analyz_aymane_ichou/sentim_analyz/reconnaissance_demotion/: __init__.py  config.py  dataset.py  features.py  plots.py
Machine_learning_algorithm/projet_sentiment_analyze/sentim_analyz_aymane_ichou/sentim_analyz/reconnaissance_demotion/modeling/: predict.py  train.py
(+1 files in other folders)
