[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "reconnaissance_demotion"
version = "0.0.1"
description = "Projet de technique d'apprentissage d'ia"
authors = [
  { name = "Aymane Ichou" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.12.3"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["reconnaissance_demotion"]
force_sort_within_sections = true


